<?xml version="1.0"?>
<package>
  <name>taskflow</name>
  <version>3.0.0</version>
  <description>The taskflow package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
