<?xml version="1.0"?>
<package>
  <name>taskflow</name>
  <version>3.5.0</version>
  <description>The taskflow package</description>
  <author>Dr.Tsung-Wei Huang</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <url type="website">https://taskflow.github.io</url>
  <url type="repository">https://github.com/taskflow/taskflow</url>
  <license>MIT</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
