<?xml version="1.0"?>
<package>
  <name>taskflow</name>
  <version>:{version}</version>
  <description>The taskflow package</description>
  <author>Dr.Tsung-Wei Huang</author>
  <maintainer email="twh760812@gmail.com">Dr.Tsung-Wei Huang</maintainer>
  <license>MIT</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
